--- a/harness/sample/sample-catalog-info.yaml
+++ b/harness/sample/sample-catalog-info.yaml
@@ -8,8 +8,9 @@ metadata:
     - title: Website
       url: http://my-sample-website.com
   annotations:
-    github.com/project-slug: my-sample-org/my-sample-repo
     backstage.io/techdocs-ref: dir:../../
+    backstage.io/source-location: 'url:https://github.com/sathish-soundarapandian/onboarding-test/tree/main'
+    github.com/project-slug: sathish-soundarapandian/onboarding-test
 spec:
   type: Service
   owner: my-sample-team
