--- a/harness/sample/tarball/test-td-tar.yaml
+++ b/harness/sample/tarball/test-td-tar.yaml
@@ -11,6 +11,7 @@ metadata:
     github.com/project-slug: sathish-soundarapandian/onboarding-test
     backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-label-selector: 'app=idp-ui'
+    jira/project-key: IDP
 spec:
   type: Service
   owner: Sathish
