--- a/harness/sample/tarball/test-td-tar.yaml
+++ b/harness/sample/tarball/test-td-tar.yaml
@@ -12,6 +12,7 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-label-selector: 'app=idp-ui'
     jira/project-key: IDP
+    pagerduty.com/service-id: PT5ED69
 spec:
   type: Service
   owner: Sathish
