--- a/harness/sample/sample-catalog-info.yaml
+++ b/harness/sample/sample-catalog-info.yaml
@@ -1,17 +1,21 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: my-sample-service
-  description: My Sample service.
-  tags: [my-sample]
+  name: my-sample-service-github
+  description: My Sample service github.
+  tags: [my-sample-github]
   links:
     - title: Website
       url: http://my-sample-website.com
   annotations:
-    github.com/project-slug: my-sample-org/my-sample-repo
-    backstage.io/techdocs-ref: dir:../../
+    github.com/project-slug: sathish-soundarapandian/onboarding-test
+    backstage.io/techdocs-ref: dir:.
+    backstage.io/kubernetes-label-selector: 'app=idp-ui'
+    jira/project-key: IDP
+    pagerduty.com/service-id: PT5ED69
+    bugsnag.com/project-key: Harness/app.harness.io
 spec:
   type: Service
-  owner: my-sample-team
-  lifecycle: experimental
-  system: my-sample-system
+  owner: Sathish-github
+  lifecycle: experimental-github
+  system: my-sample-system-github
