--- a/harness/sample/sample.yaml
+++ b/harness/sample/sample.yaml
@@ -14,6 +14,7 @@ metadata:
     jira/project-key: IDP
     pagerduty.com/service-id: PT5ED69
     bugsnag.com/project-key: Harness/app.harness.io
+    jenkins.io/github-folder: "folder-name/project-name"
 spec:
   type: Service
   owner: Sathish-github
