--- a/workflowformdata.yaml
+++ b/workflowformdata.yaml
@@ -2,7 +2,7 @@ apiVersion: harness.io/v1
 kind: Workflow
 type: service
 identifier: infrapipelinetfcommunitymodulesinglechoicelistgitx
-name: Infra Pipeline TF community module single choice list
+name: Infra Pipeline TF community module single choice list test
 owner: UAL_Harness_IDP_PlatformEngineer_DGG
 spec:
   output:
