--- a/workflowformdata.yaml
+++ b/workflowformdata.yaml
@@ -34,14 +34,14 @@ spec:
         type: string
         ui:field: ContextViewer
         ui:options:
-          getContextData: '{{ formContext.roleScopeLevelValue }}'
+          getContextData: ${{ formContext.roleScopeLevelValue }}
       resourceGroupIdentifierName:
         title: Resource Group Identifier
         description: Resource Group Identifier for the user Role
         type: string
         ui:field: ContextViewer
         ui:options:
-          getContextData: '{{ formContext.resourceGroupIdentifierValue }}'
+          getContextData: ${{ formContext.resourceGroupIdentifierValue }}
       resourceGroupNameName:
         title: Resource Group Name
         readonly: true
@@ -49,7 +49,7 @@ spec:
         type: string
         ui:field: ContextViewer
         ui:options:
-          getContextData: '{{ formContext.resourceGroupNameValue }}'
+          getContextData: ${{ formContext.resourceGroupNameValue }}
   - title: Get the values from getContextData
     properties:
       roleScopeLevelName_getData:
@@ -59,7 +59,7 @@ spec:
         type: string
         ui:field: ContextViewer
         ui:options:
-          getContextData: '{{ formContext.roleScopeLevelValue }}'
+          getContextData: ${{ formContext.roleScopeLevelValue }}
       resourceGroupIdentifierName_getData:
         title: Resource Group Identifier
         readonly: true
@@ -67,7 +67,7 @@ spec:
         type: string
         ui:field: ContextViewer
         ui:options:
-          getContextData: '{{ formContext.resourceGroupIdentifierValue }}'
+          getContextData: ${{ formContext.resourceGroupIdentifierValue }}
       resourceGroupNameName_getData:
         title: Resource Group Name
         readonly: true
@@ -75,7 +75,7 @@ spec:
         type: string
         ui:field: ContextViewer
         ui:options:
-          getContextData: '{{ formContext.resourceGroupNameValue }}'
+          getContextData: ${{ formContext.resourceGroupNameValue }}
   steps:
   - id: trigger
     name: Creating Standardized Harness CI Pipeline For the Stack You Selected.
